--- a/Restaraunts nearby/Podfile
+++ b/Restaraunts nearby/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '13.0'
 use_frameworks!
 
-target 'Restaraunts' do
+target 'Restaurants' do
   pod 'SwiftLocation', '~> 5.0'
   pod 'CombineCocoa', '~> 0.2'
   pod 'GSMessages', '~> 1.7'
