--- a/Restaraunts/Podfile
+++ b/Restaraunts/Podfile
@@ -5,4 +5,5 @@ target 'Restaurants' do
   pod 'SwiftLocation', '~> 5.0'
   pod 'CombineCocoa', '~> 0.2'
   pod 'GSMessages', '~> 1.7'
+  pod 'LocationProvider', :git => 'https://github.com/skyylex/LocationProvider.git', :commit => '5f9ba301b2f77c2cf5a0ed2b1ff1ea6e2912c6e3'
 end
