--- a/Restaraunts/Podfile
+++ b/Restaraunts/Podfile
@@ -2,6 +2,7 @@ platform :ios, '13.0'
 use_frameworks!
 
 target 'Restaurants' do
+  pod 'FoursquareAPIClient', '~> 5.0'
   pod 'SwiftLocation', '~> 5.0'
   pod 'CombineCocoa', '~> 0.2'
   pod 'GSMessages', '~> 1.7'
