--- a/Restaraunts/Podfile
+++ b/Restaraunts/Podfile
@@ -2,6 +2,8 @@ platform :ios, '13.0'
 use_frameworks!
 
 target 'Restaurants' do
+  pod 'Argo', '~> 5.0'
+  pod 'Curry', '~> 5.0'
   pod 'FoursquareAPIClient', '~> 5.0'
   pod 'SwiftLocation', '~> 5.0'
   pod 'CombineCocoa', '~> 0.2'
