--- a/Restaraunts/Podfile
+++ b/Restaraunts/Podfile
@@ -1,6 +1,7 @@
 platform :ios, '13.0'
 use_frameworks!
-  
+inhibit_all_warnings!
+
 target 'Restaurants' do
   pod 'BottomPopup', '~> 0.6'
   pod 'Argo', '~> 5.0'
